--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -4,6 +4,11 @@
 // Dom elements
 h1
     text-align: center
+    // For debug
+    width: 100px
+    height: 100px
+    display: block
+    background: red
 li
     list-style: none
 em
