--- a/src/assets/styles/aboutme.sass
+++ b/src/assets/styles/aboutme.sass
@@ -1,3 +1,14 @@
+@use 'mods/vars' as vars
+
 quote
     text-align: center
     display: block
+
+.intro
+    width: 80vw
+    margin: 20px auto
+    padding: 20px
+    text-indent: 24px
+    border: 4px solid vars.$border-color
+    border-radius: 22px
+    box-shadow: vars.$box-shadow
