--- a/src/components/Avatar/avatar.sass
+++ b/src/components/Avatar/avatar.sass
@@ -7,3 +7,4 @@ img
     margin: vars.$spacer auto
     display: block
     border: vars.$border-width solid vars.$border-color
+    box-shadow: vars.$box-shadow
