Update hover style of tag a

--- a/src/assets/styles/mods/_reset.sass
+++ b/src/assets/styles/mods/_reset.sass
@@ -129,9 +129,9 @@ small
 a
     color: vars.$link-color
     text-decoration: underline
-
     &:hover
         color: vars.$link-hover-color
+        cursor: pointer
 
 // Figures
 //
