--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -19,5 +19,20 @@ footer
 .page
     padding: 0 2rem
 
-.loading
+.loading,header
     text-align: center
+
+.projects
+    width: 60vw
+    margin: 0 auto
+    h3
+        font-size: 1.2rem
+        position: relative
+        &:after
+            content: ""
+            display: block
+            width: 10%
+            height: 2px
+            background: #212529
+
+
