Remove Avatar component
    In the previous version, Avatar dealt with img error loading which was not necessary for local img assets that could barely hit error loading scene.

--- a/src/components/Aboutme/aboutme.sass
+++ b/src/components/Aboutme/aboutme.sass
@@ -1,3 +1,14 @@
+@use "../../assets/styles/mods/_vars" as vars
+
+img.avatar
+    width: 160px
+    height: 160px
+    border-radius: 50%
+    margin: vars.$spacer auto
+    display: block
+    border: vars.$border-width solid vars.$border-color
+    box-shadow: vars.$box-shadow
+
 .projects
     width: 60vw
     margin: 0 auto
