--- a/src/components/Jackie/Posts/post.sass
+++ b/src/components/Jackie/Posts/post.sass
@@ -1,6 +1,30 @@
+body
+  background: linear-gradient(0, #4e8cae 75%, #fff 85%)
+img
+  border: 4px solid black
+  margin: 0 auto 1rem 
+  display: block
+.img-broken
+  border: 4px solid #f2f2f2
 .post
-  background: #c6d6e2
-  border-radius: 30px
-  border: 20px solid #f2f2f2
   font-size: small
   font-family: 'Verdana'
+  margin: 195px 0 auto
+  &-content
+    background: #c6d6e2
+    border-radius: 30px
+    border: 20px solid #f2f2f2
+    padding: 10px 30px
+  h2
+    font-size: 1.2rem
+    font-weight: bold
+  span
+    display: block
+
+.center
+    text-align: center
+.copyright
+  text-align: center
+  margin:0 auto
+
+
